--- a/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
+++ b/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
@@ -173,8 +173,8 @@ $$
 
 price_par_t0_d1 <- c(15, 3, 2, 3, -2)
 price_par_t0_d2 <- c(15, 3, 2, 3, -2)
-price_par_t0_d3 <- c(15, 2, 3, 2, -2)
-price_par_t0_d4 <- c(15, 4, 4, 1, -2)
+price_par_t0_d3 <- c(15, 1, 3, 2, -2)
+price_par_t0_d4 <- c(15, 4, 5, 1, -2)
 
 price_gen_d <- function(choice_t0, D, price_par_t0){
   output <- choice_t0 %>% 
@@ -263,8 +263,10 @@ summarize_choice <- choice_t0 %>%
 summarize_choice
 ```
 
-```{r visualize price}
+- The figure shows generated prices of each plan.
+- Monitoring plan provided by firm 1 is slightly lower than other plans, representing the opt-in discount
 
+```{r visualize price}
 ## Visualize Price in t = 0
 g_price_t0 <- choice_t0 %>% 
   dplyr::mutate(plan = dplyr::case_when(d == 1 ~ "Firm1 Monitoring",
@@ -308,24 +310,24 @@ cost_t0 <- cost_t0 %>%
                 log_score = log(score)) %>% 
   dplyr::select(i, claims, matches("sev."), score, log_score)
 
-summary(cost_t0)
+```
+
+- The following figure shows realized monitoring scores (in logarithm) for opt-in drivers
+
+```{r visualize realized score}
+## Visualize Price in t = 0
+g_realized_score <- cost_t0 %>%
+  dplyr::filter(score != 1) %>% 
+  ggplot(aes(x = log_score)) + 
+  geom_histogram(binwidth = 0.1)
+
+plot(g_realized_score)
 
 ```
 
 ## Generate Choice in $t = 1$
 
 ```{r generate choice in t1}
-renewal_price_t1 <- choice_t0 %>% 
-  dplyr::filter(choice == 1)
-
-renewal_price_t1 <- choice_t0 %>% 
-  dplyr::filter(choice == 1) %>% 
-  dplyr::left_join(cost_t0, by = c("i")) %>% 
-  dplyr::mutate(gamma_alpha = ifelse(m == 0,
-                                     alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2,
-                                     alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*score)) %>% 
-  dplyr::select(i, gamma_alpha)
-
 ## Prior Firm
 prior_firm_t1 <- choice_t0 %>% 
   dplyr::filter(choice == 1) %>% 
@@ -344,6 +346,14 @@ prior_price_t1 <- choice_t0 %>%
   dplyr::select(i, f, prior_price) %>% 
   dplyr::arrange(i)
 
+## Renewal price
+renewal_price_t1 <- choice_t0 %>% 
+  dplyr::filter(choice == 1) %>% 
+  dplyr::left_join(cost_t0, by = c("i")) %>% 
+  dplyr::mutate(gamma_alpha = ifelse(m == 0,
+                                     alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2,
+                                     alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*score)) %>% 
+  dplyr::select(i, gamma_alpha)
   
   
 choice_t1 <- expand.grid(i = 1:N, d = 1:(D - 1), t = 1) %>% 
